tests/baselines/reference/typeOnlyMerge2.errors.txt
tests/cases/conformance/externalModules/d.ts(2,1): error TS1362: 'A' cannot be used as a value because it was exported using 'export type'.


==== tests/cases/conformance/externalModules/a.ts (0 errors) ====
    const A = {}
    export { A };
    
==== tests/cases/conformance/externalModules/b.ts (0 errors) ====
    import { A } from "./a";
    type A = any;
    export type { A };
    
==== tests/cases/conformance/externalModules/c.ts (0 errors) ====
    import { A } from "./b";
    namespace A {}
    export { A };
    
==== tests/cases/conformance/externalModules/d.ts (1 errors) ====
    import { A } from "./c";
    A;
    ~
!!! error TS1362: 'A' cannot be used as a value because it was exported using 'export type'.
!!! related TS1377 tests/cases/conformance/externalModules/b.ts:3:15: 'A' was exported here.
    